[package]
authors = ["Amir Boziev <amrbz@proton.me>"]
name = "pow_account"
version = "0.1.0"
edition = "2021"
description = "Generation of hashes with leading zeros for password-less authentication and DDoS protection"
license = "MIT"
repository = "https://github.com/1prefix/pow-account"
keywords = [
    "authentication",
    "proof-of-work",
    "pow",
    "ddos",
    "password-less",
    "client",
    "open-sourse",
    "leading zeros",
]
readme = "README.md"
license-file = "LICENSE"
categories = ["authentication", "command-line-utilities"]

[dependencies]
blake2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
rand_core = "0.6.4"
