[package]
authors = ["Amir Boziev <amrbz@proton.me>"]
name = "pow_account"
version = "0.2.0"
edition = "2021"
description = "This library generates cryptographic hashes with a second round of hashing to produce configurable leading zeros for proof-of-work or validation"
license = "MIT"
repository = "https://github.com/1prefix/pow-account"
keywords = ["authentication", "hash", "leading-zeros", "proof-of-work"]
readme = "README.md"
license-file = "LICENSE"
categories = ["authentication", "command-line-utilities"]

[dependencies]
blake2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
rand_core = "0.6.4"
